# ic-storage-canister

./: .gitignore  .gitlab-ci.yml  Cargo.toml  chunk.did  dfx.json  finalize.did  init.did
.github/workflows/: publish_crates.yml  release_wasm.yml
api/: Cargo.toml  can.did
api/src/lifecycle/: mod.rs
api/src/queries/: mod.rs
api/src/types/: storage.rs
api/src/updates/: cancel_upload.rs  finalize_upload.rs  init_reupload.rs  init_upload.rs  mod.rs  remove_file.rs  store_chunk.rs
c2c/: Cargo.toml
c2c/src/: lib.rs
canister/: Cargo.toml
canister/src/: jobs.rs  lib.rs  state.rs  utils.rs
canister/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs
canister/src/queries/: http_request.rs  management.rs  mod.rs
canister/src/types/: http.rs  storage.rs
canister/src/updates/: storage.rs
integrations_tests/: Cargo.toml  README.md
integrations_tests/src/: lib.rs  utils.rs  wasms.rs
integrations_tests/src/client/: mod.rs  storage.rs
integrations_tests/src/storage_suite/setup/: mod.rs  setup.rs  setup_storage.rs
integrations_tests/src/storage_suite/tests/: mod.rs  test_gc_abandoned_upload.rs  test_remove_and_reupload.rs  test_storage.rs  test_storage_old_to_new_compat.rs  test_storage_upgrade.rs
scripts/: build.sh  run_integrations_tests.sh  upload.sh
scripts/ci-cd/: .canister_builds.yml  .canister_tests.yml  .rust_template.yml
scripts/deploy/local/: deploy_storage.sh
wasm/: can.did  storage_canister.wasm
