[workspace]
members = [
    "api",
    "canister",
    "c2c",
    "integrations_tests"
]
resolver = "2"

# Single source of truth for the published crate versions. api, c2c and canister
# inherit this via `version.workspace = true`, so a release bumps them in lockstep.
# (integration_tests keeps its own version: it is a private test crate, never published.)
[workspace.package]
version = "0.5.0"
edition = "2021"

[profile.release]
lto = "thin"
panic = "abort"


[workspace.dependencies]
candid = { version = "0.10.13", features = ["value"] }
ciborium = "0.2.2"
futures = "0.3.29"
# Enable `custom` feature of k256's getrandom dependency. See icp_neuron/impl/src/ecdsa.rs for more details.
getrandom = { version = "0.3.2", features = ["custom"] }
hex = "0.4.3"
ic-cdk = "0.19.0"
ic-cdk-macros = "0.19.0"
ic-cdk-timers = "1.0.0"
ic-ledger-types = "0.16.0"
ic-stable-structures = "0.7.2"
ic-transport-types = "0.45.0"
ic0 = "1.0.1"
icrc-ledger-types = "0.1.12"
k256 = "0.13.1"
proc-macro2 = "1.0.106"
quote = "1.0.44"
rmp-serde = "1.3.1"
serde = "1.0.228"
serde_bytes = "0.11.19"
serde_cbor = "0.11.2"
serde_json = "1.0.149"
serde_with = "3.7.0"
serde_yaml = "0.9.33"
serde_tokenstream = "0.2.2"
sha2 = "0.10.9"
syn = "2.0.114"
tracing = "0.1.44"
tracing-attributes = "0.1.31"
tracing-subscriber = "0.3.22"
num-bigint = "0.4.4"
time = { version = "0.3.47", features = [
  "macros",
  "serde",
  "parsing",
  "formatting",
] }
pocket-ic = "12.0.0"
async-trait = "0.1.89"
enum_dispatch = "0.3.13"
typetag = "0.2.18"
minicbor = { version = "1.0.0", features = ["alloc", "derive"] }
canfund = "0.8.2"
ic-asset-certification = "3.1.0"
ic-http-certification = "3.1.0"
lazy_static = "1.4.0"
url = "2.5.8"

# Intra-workspace dep. `path` is used for local/workspace builds; `version` is what
# ends up in the published c2c manifest, so `cargo publish` works once api is on crates.io.
# The version must track [workspace.package].version on each release (cargo cannot
# inherit workspace.package.version into a dependency entry).
bity-ic-storage-canister-api    = { path = "api", version = "0.5.0" }

bity-ic-canister-client         = "0.3.0"
bity-ic-canister-logger         = "0.3.0"
bity-ic-canister-state-macros   = "0.2.2"
bity-ic-canister-tracing-macros = "0.1.1"
bity-ic-canister-time           = "0.3.0"
bity-ic-serializer              = "0.2.0"
bity-ic-stable-memory           = "0.3.0"
bity-ic-types                   = "0.2.0"
bity-ic-utils                   = "0.3.0"