[package]
name = "bity-ic-storage-canister-c2c"
version.workspace = true
edition.workspace = true
description = "Api for Canister to Canister calls for the storage canister"
license = "MIT"
authors = ["Gautier Wojda <gautier.wojda@bity.com>"]
repository = "https://github.com/BitySA/ic-storage-canister"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bity-ic-storage-canister-api = { workspace = true, features = [] }
ic-cdk = { workspace = true }
candid = { workspace = true }
bity-ic-types = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
