[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pocket-ic = { workspace = true}
candid = { workspace = true }
serde = { workspace = true, features = ["derive"] }

bity-ic-types = { workspace = true }
bity-ic-utils = { workspace = true }
bity-ic-canister-time = { workspace = true }

icrc-ledger-types = { workspace = true }
ic-ledger-types = { workspace = true }
rand = "0.10.0"
lazy_static = "1.4.0"
hex = "0.4"
sha2 = "0.10.8"
serde_bytes = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.0"
ic-http-certification = { workspace = true }
bity-ic-storage-canister-api = { path = "../api", features = []}
ic-cdk = { workspace = true }
reqwest = "0.13.2"
tokio = { version = "1.43.0", features = ["full"] }
ic-agent = { version = "0.45.0"}
ic-http-gateway = { version = "0.4.2"}
http = "1.2.0"
bytes = "1.1.0"
http-body-util = "0.1.2"
url = "2.5.4"